fix spacing on default templates on small screens

--- a/app/assets/sass/components/_fmt.scss
+++ b/app/assets/sass/components/_fmt.scss
@@ -79,6 +79,10 @@
     margin: 0 auto;
     object-fit: contain;
   }
+
+  @include breakpoint(small only) {
+    padding: size(large) size(medium);
+  }
 }
 
 .fmt--unpadded {
